modal for existing member

--- a/membership-final-test.html
+++ b/membership-final-test.html
@@ -316,7 +316,7 @@
                   <div class="step-details">
 
                     <!-- step 1  -->
-                    <div class="step-box" data-step="1">
+                    <div class="step-box active" data-step="1">
                       <div class="step-box-wrapper">
                         <div class="step-box-head">
                           <h3 class="font-600">Join as a member</h3>
@@ -404,7 +404,7 @@
                     </div>
 
                     <!-- step 2 [member information]  -->
-                    <div class="step-box active" data-step="2">
+                    <div class="step-box" data-step="2">
                       <div class="step-box-wrapper">
                         <div class="step-box-head">
                           <h3 class="font-600">Member Information</h3>
@@ -901,7 +901,7 @@
                                 </div>
                               </div>
 
-                              <div class="mb-4">
+                              <div class="alert alert-warning mb-4">
                                 <div class="form-check form-check-lg">
                                   <input class="form-check-input" type="radio" name="MembershipType" id="physician"
                                          data-membership-type-key="kljhsdjf-dsdfdsdfssfojdslksdfsdfjds"
@@ -911,13 +911,14 @@
                                          data-membership-type-selector=".membership-type-key"
                                          data-product-key-selctor=".membership-product-type-key"
                                          data-amount-selector=".membership-amount"
-                                         data-value="physician">
+                                         data-value="physician" disabled>
                                   <label class="form-check-label ps-2 text-medium font-600 text-uppercase"
                                          for="physician">
                                     Physician Yearly
                                   </label>
                                   <p class="ps-2 lh-1 text-grey mb-2">Full Member (US and Canadian Residents)</p>
                                   <p class="ps-2 fw-semibold fs-5 text-teal m-0">$17</p>
+                                  <p class="text-danger mt-2 mb-0">You are already registered with this role</p>
                                 </div>
                               </div>
 
@@ -1415,6 +1416,44 @@
     </div>
   </div>
 
+  <!-- modal ismember -->
+  <div class="modal" tabindex="-1" id="modal-ismember" data-bs-backdrop="static" data-bs-keybord="false">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title font-bold">Already a Member!</h5>
+          <div class="d-flex justify-content-end pe-3">
+            <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
+              <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                      d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+
+        <div class="modal-body">
+          <div class="pt-2 pb-4">
+            <div class="alert alert-warning">
+              <p class="m-0 fw-semibold text-medium">An account associated with this email address already exists in our system.</p>
+            </div>
+
+            <p class="text-medium" style="border-left: 4px solid #2196F3;background: #cfe2ff;padding: 10px 15px;">You can <a href="javascript:void(0)">Login Here</a> </p>
+
+            <p class="text-medium" style="border-left: 4px solid #2196F3;background: #cfe2ff;padding: 10px 15px;">If you have forgotten your password you can send a <a href="javascript:void(0)">password reset request</a> </p>
+
+          </div>
+
+        </div>
+        <div class="modal-footer justify-content-end" style="margin-top:-35px">
+          <button type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="modal">CLOSE</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <!-- jquery -->
@@ -1453,6 +1492,11 @@
   function submitTheForm() {
     window.location.href = "success.html";
   }
+
+  $(document).on('ready', function (){
+    $('#modal-ismember').modal('show');
+  })
+
 </script>
 </body>
 
